# particle_checker

./: .gitignore  BuildCommandMode.h  CMakeLists.txt  CalibrationStep.h  DataNUC.h  README.md  SerialEvent.h  SourceVideoMode.h  Step.h  ThermalDeviceState.h  cameraimagewidget.cpp  cameraimagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
calib_lib/: bpc.cpp  bpc.h  calibration.cpp  calibration.h  nuc.cpp  nuc.h
